----------------------------------------------------------------------
----------------------------------------------------------------------

1.1.2 - 12/05/2010
----------------------------------------------------------------------
- Fixed: MP html needs more css class names
- Fixed: Make "Continue Checkout" button text only
- Fixed: Unclosed label tags cause widget drag/drop issue in IE

1.1.1 - 11/25/2010
----------------------------------------------------------------------
- Fixed: post_thumbnails breaks themes
- Fixed: Marketpress Product List widget displays all products

1.1 - 11/10/2010
----------------------------------------------------------------------
- 2Checkout and Authorize.net beta gateways added
- new mp_is_shop_page() template function http://premium.wpmudev.org/forums/topic/marketpressload_store_templates-should-make-is_shop_page-available
- fixed bug not allowing limited gateways for supporters
- lots of little bug fixes/improvements

1.0.4 - 10/15/2010
----------------------------------------------------------------------
- Added support for MP_ROOT_BLOG define to change blog for global listings
- Fixed permissions bug for changing order status

1.0.3 - 10/12/2010
----------------------------------------------------------------------
- Fixed fatal error when unchecking all gateways
- Fixed error saving decimal in extra shipping
- Fixed currency display decimals in admin fields

1.0.2 - 10/01/2010
----------------------------------------------------------------------
- Fixed bug with paging on product/taxonomy lists
- Fixed title on taxonomy list pages
- Hopefully added a workaround to detect and deal with poorly written plugins that flush rewrite rules before init
- Fixed bug that incorrectly showed out of stock button when stock remained

1.0.1 - 9/18/2010
----------------------------------------------------------------------
- Fixed bug in global listings that didn't show product thumbnails/prices

1.0 - 9/11/2010